--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,16 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+asgiref = "3.5.0"
+beautifulsoup4 = "4.10.0"
+dj-database-url = "0.5.0"
+Django = "4.0.2"
+django-bootstrap4 = "21.2"
+django-heroku = "0.3.1"
+psycopg2 = "2.9.3"
+soupsieve = "2.3.1"
+sqlparse = "0.4.2"
+whitenoise = "5.3.0"
 
 [tool.poetry.dev-dependencies]
 
