--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ sqlparse = "0.4.2"
 whitenoise = "^5.3.0"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.18.1"
+black = "^22.3.0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
