--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ pre-commit = "^2.18.1"
 black = "^22.3.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
+django-debug-toolbar = "^3.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
