--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ soupsieve = "^2.3.1"
 sqlparse = "0.4.2"
 whitenoise = "^5.3.0"
 environs = {extras = ["django"], version = "^9.5.0"}
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
