Add friendly names to containers. Resolves #23

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.7"
 
 services:
   web:
+    container_name: learning_log-web
     build: .
     command: python /code/manage.py runserver 0.0.0.0:8000
     volumes:
@@ -13,6 +14,7 @@ services:
     environment:
       - "DEBUG=True"
   db:
+    container_name: learning_log-db
     image: postgres:11
     volumes:
       - postgres_data:/var/lib/postgresql/data/
