--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ license = MIT
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 4.0.4
+    Framework :: Django :: 4.0.5
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
@@ -32,10 +32,9 @@ exclude =
     __pycache__,
     build,
     .env,
-    accounts/migrations/0001_initial.py,
-    learning_log/migrations/0001_initial.py,
-    learning_log/migrations/0002_entry.py,
-    learning_log/migrations/0003_topic_owner.py,
+    accounts/migrations/*,
+    learning_logs/migrations/*,
+    pages/migrations/*,
     dist,
     images/
 # https://www.flake8rules.com
