--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
     rev: 22.3.0
     hooks:
     - id: black
+      exclude: ^.*\b(migrations)\b.*$
       # See bug: https://github.com/psf/black/issues/2964
       # If possible, run rev: 22.3.0 to obviate the need for pinning click
       # additional_dependencies: ["click==8.0.4"]
