Install & configure pytest & coverage. Resolves #26

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,30 @@ exclude = '''
 )/
 '''
 
+[tool.coverage.paths]
+source = ["accounts", "config", "learning_logs"]
+
+[tool.coverage.run]
+branch = true
+source = ["config"]
+omit = [
+    "*/__init__.py",
+    "*manage.py",
+    "*settings*.py",
+    "*urls.py",
+    "*admin.py",
+    "*migrations/*",
+    "*tests/*",
+    "*test_*.py",
+    "*tests.py",
+    "*wsgi.py",
+    "*conftest.py",
+    "*/extra*",
+]
+
+[tool.coverage.report]
+show_missing = true
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3
@@ -50,6 +74,16 @@ black = "^22.3.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
 django-debug-toolbar = "^3.2.4"
+coverage = {extras = ["toml"], version = "^6.4.1"}
+pytest-cov = "^3.0.0"
+pytest-django = "^4.5.2"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "config.settings"
+python_files = ["tests.py", "test_*.py", "*_tests.py"]
+filterwarnings = [
+    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
