Install django-allauth

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ sqlparse = "0.4.2"
 whitenoise = "^5.3.0"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
+django-allauth = "^0.51.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
