--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ whitenoise = "^5.3.0"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 django-allauth = "^0.51.0"
+django-crispy-forms = "^1.14.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
