--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,8 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
+    # add supported hooks https://pre-commit.com/hooks.html
       - id: check-added-large-files
       - id: check-toml
       - id: check-yaml
@@ -10,23 +11,24 @@ repos:
       - id: end-of-file-fixer
       - id: requirements-txt-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
+  - repo: local
     hooks:
     - id: black
+      name: black
+      entry: poetry run black
+      language: system
+      types: [python]
       exclude: ^.*\b(migrations)\b.*$
       # See bug: https://github.com/psf/black/issues/2964
       # If possible, run rev: 22.3.0 to obviate the need for pinning click
       # additional_dependencies: ["click==8.0.4"]
-  - repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
-    hooks:
-      - id: flake8
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
-    hooks:
-      - id: isort
-#  - repo: https://github.com/pre-commit/mirrors-eslint
-#  rev: v8.3.0
-#  hooks:
-#    - id: eslint
+    - id: flake8
+      name: flake8
+      entry: poetry run flake8
+      language: system
+      types: [python]
+    - id: isort
+      name: isort
+      entry: poetry run isort
+      language: system
+      types: [python]
