--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,10 @@ pytest-cov = "^3.0.0"
 pytest-django = "^4.5.2"
 django-test-plus = "^2.2.0"
 pytest-sugar = "^0.9.4"
+django-extensions = "^3.1.5"
+ipython = "^8.4.0"
+friendly = "^0.5.29"
+colorama = "^0.4.4"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
