--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,13 @@ pytest-sugar = "^0.9.4"
 ipython = "^8.4.0"
 friendly = "^0.5.29"
 colorama = "^0.4.4"
+nox = "^2022.1.7"
+flake8-bandit = "^3.0.0"
+flake8-black = "^0.3.3"
+flake8-bugbear = "^22.6.22"
+flake8-docstrings = "^1.6.0"
+flake8-import-order = "^0.18.1"
+safety = "^1.10.3"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
