--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ whitenoise = "^5.3.0"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 django-allauth = "^0.51.0"
+django-countries = "^7.3.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
