--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 django-allauth = "^0.51.0"
 django-countries = "^7.3.2"
+Pillow = "^9.2.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
