--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ flake8-bugbear = "^22.6.22"
 flake8-docstrings = "^1.6.0"
 flake8-import-order = "^0.18.1"
 safety = "^1.10.3"
+factory-boy = "3.0.1"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
