--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ classifiers =
 [flake8]
 # https://flake8.pycqa.org/en/latest/user/configuration.html
 exclude =
+    conftest.py
     # No need to traverse git directory
     .git,
     # Skip cache directories
