--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ psycopg2-binary = "^2.9.3"
 django-allauth = "^0.51.0"
 django-countries = "^7.3.2"
 Pillow = "^9.2.0"
+gunicorn = "~=20.1.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
