--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ ignore =
     E722
 max-line-length = 79
 per-file-ignores =
+    config/urls.py: I202
     # __init__ exports names
     # app/crud/__init__.py: F401
     # app/schemas/__init__.py: F401
