--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ django-heroku = "0.3.1"
 psycopg2 = "2.9.3"
 soupsieve = "^2.3.1"
 sqlparse = "0.4.2"
-whitenoise = "^5.3.0"
+whitenoise = "5.3.0"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.3"
 django-allauth = "^0.51.0"
