--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ safety = "^2.1.0"
 factory-boy = "3.0.1"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
+Sphinx = "^5.1.1"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
