--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-# updated 20220207
+# updated 20220904
 # from: https://github.com/github/gitignore
-#
 LOCAL_APP_NOTES
-*.sqlite3
-app.db
-.idea/
-logs/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -45,7 +41,6 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
 .tox/
 .nox/
 .coverage
@@ -64,11 +59,14 @@ cover/
 *.pot
 
 # Django stuff:
+logs/
 *.log
 local_settings.py
-#*.sqlite
-#db.sqlite3
-# db.sqlite3-journal
+*.sqlite
+*.sqlite3
+app.db
+db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -159,4 +157,4 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
