--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = learning_log
-version = 0.1
+name = learning-log
+version = 0.1.0
 description = A Django web application for creating learning lists
 long_description = file: README.rst
-url = https://github.com/kevinbowen777/learning_log
+url = https://github.com/kevinbowen777/learning-log
 author = Kevin Bowen
 author_email = kevin.bowen@gmail.com
 license = MIT
@@ -17,9 +17,9 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Internet :: WWW/HTTP
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
 
