--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ django-allauth = "^0.51.0"
 django-countries = "^7.3.2"
 Pillow = "^9.2.0"
 gunicorn = "~=20.1.0"
+cryptography = "38.0.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
