Update packages, re-write noxfile & import ordering for tests & 3.11

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,15 +49,15 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 beautifulsoup4 = "^4.10.0"
-dj-database-url = "0.5.0"
+dj-database-url = "^1.0.0"
 Django = "^4.1"
-django-bootstrap4 = "^21.2"
+django-bootstrap4 = "^22.0"
 django-crispy-forms = "^1.14.0"
 django-extensions = "^3.1.5"
 django-heroku = "0.3.1"
 soupsieve = "^2.3.1"
-sqlparse = "0.4.2"
-whitenoise = "5.3.0"
+sqlparse = "^0.4.2"
+whitenoise = "^6.0.0"
 environs = {extras = ["django"], version = "^9.5.0"}
 psycopg2-binary = "^2.9.5"
 django-allauth = "^0.51.0"
@@ -69,18 +69,18 @@ cryptography = "38.0.1"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
 black = "^22.3.0"
-flake8 = "^4.0.1"
+flake8 = "^5.0.0"
 django-debug-toolbar = "^3.2.4"
 coverage = {extras = ["toml"], version = "^6.4.1"}
-pytest-cov = "^3.0.0"
+pytest-cov = "^4.0.0"
 pytest-django = "^4.5.2"
 django-test-plus = "^2.2.0"
 pytest-sugar = "^0.9.4"
 ipython = "^8.4.0"
-friendly = "^0.5.29"
+friendly = "^0.7.0"
 colorama = "^0.4.4"
 nox = "^2022.1.7"
-flake8-bandit = "^3.0.0"
+flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^22.6.22"
 flake8-docstrings = "^1.6.0"
