--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ django-countries = "^7.3.2"
 Pillow = "^9.2.0"
 gunicorn = "~=20.1.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pre-commit = "^2.18.1"
 black = "^22.3.0"
 flake8 = "^5.0.0"
