--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ pip-check = "^2.7"
 pip-audit = "^2.4.3"
 Sphinx = "^5.1.1"
 flake8-import-order = "^0.18.2"
+django-coverage-plugin = "^3.0.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
