--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
   db:
     container_name: learning_log-db
     environment:
+      POSTGRES_DB:  "${POSTGRES_DB}" 
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     image: postgres:13.8
