Create docker-compose-prod.yml. Resolves #150

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # from: https://github.com/github/gitignore
 LOCAL_APP_NOTES
 
+docker-compose-prod.yml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
