--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ license = "MIT"
 python = "^3.10"
 beautifulsoup4 = "^4.10.0"
 dj-database-url = "^1.0.0"
-Django = "^4.1"
+Django = "4.1.4"
 django-bootstrap4 = "^22.0"
 django-crispy-forms = "^1.14.0"
 django-extensions = "^3.1.5"
@@ -83,7 +83,7 @@ flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^22.6.22"
 flake8-docstrings = "^1.6.0"
-safety = "^2.1.0"
+safety = "^2.3.5"
 factory-boy = "3.0.1"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
