--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,18 +22,15 @@ source = ["accounts", "config", "learning_logs", "pages"]
 branch = true
 source = ["config"]
 omit = [
-    "*/__init__.py",
+    "*conftest.py",
     "*manage.py",
     "*settings*.py",
-    "*urls.py",
-    "*admin.py",
-    "*migrations/*",
-    "*tests/*",
-    "*test_*.py",
-    "*tests.py",
+    "*test.py",
     "*wsgi.py",
-    "*conftest.py",
-    "*/extra*",
+    "*/__init__.py",
+    "*/migrations/*",
+    "*/factories.py",
+    "*/tests/*",
 ]
 
 [tool.coverage.report]
