--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ license = "MIT"
 python = "^3.10"
 beautifulsoup4 = "^4.10.0"
 dj-database-url = "^1.0.0"
-Django = "4.1.4"
+Django = "4.1.5"
 django-bootstrap4 = "^22.0"
 django-crispy-forms = "^1.14.0"
 django-extensions = "^3.1.5"
@@ -84,7 +84,7 @@ safety = "^2.3.5"
 factory-boy = "3.0.1"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
-Sphinx = "^6.0.0"
+Sphinx = "6.0.0"
 flake8-import-order = "^0.18.2"
 django-coverage-plugin = "^3.0.0"
 
