Add file exclusions for lint-3.9 tests. Fixes #191

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,7 +57,7 @@ ignore =
     E722
 per-file-ignores =
     accounts/tests.py:S101,S106
-    accounts/tests/*:S101,S106
+    accounts/tests/*:BLK100,S101,S106
     config/tests.py:S101,S106
     config/tests/*:S101,S106
     learning_logs/tests.py:S101,S106
