--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ beautifulsoup4 = "^4.10.0"
 dj-database-url = "^1.0.0"
 Django = "4.1.7"
 django-bootstrap4 = "^22.0"
-django-crispy-forms = "^1.14.0"
+django-crispy-forms = "^2.0"
 django-extensions = "^3.1.5"
 django-heroku = "0.3.1"
 soupsieve = "^2.3.1"
@@ -61,6 +61,7 @@ django-allauth = "^0.52.0"
 django-countries = "^7.3.2"
 Pillow = "^9.2.0"
 gunicorn = "~=20.1.0"
+crispy-bootstrap4 = "^2022.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.0"
