--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -330,6 +330,9 @@ coverage[toml]==7.1.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:f2cba5c6db29ce991029b5e4ac51eb36774458f0a3b8d3137241b32d1bb91f06 \
     --hash=sha256:f5b4198d85a3755d27e64c52f8c95d6333119e49fd001ae5798dac872c95e0f8 \
     --hash=sha256:ffeeb38ee4a80a30a6877c5c4c359e5498eec095878f1581453202bfacc8fbc2
+crispy-bootstrap4==2022.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:5241ab1dc2188c95560aa786439bcbedec7416e6b0f5a52dded82380810367ec \
+    --hash=sha256:f18386c4d96180c1bb1212487d6e8f5a3dd1a9bb58d3032183973d4d130b55f9
 cryptography==39.0.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:0f8da300b5c8af9f98111ffd512910bc792b4c77392a9523624680f7956a99d4 \
     --hash=sha256:35f7c7d015d474f4011e859e93e789c87d21f6f4880ebdc29896a60403328f1f \
@@ -387,9 +390,9 @@ django-countries==7.5.1 ; python_version >= "3.10" and python_version < "4.0" \
 django-coverage-plugin==3.0.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:245ecd6e91e5be7a66e0f811fd57091c46b55c0eb85c7fe1a1e4aebca9842a5f \
     --hash=sha256:c063d8d49ba2da30fe95d91cf3f0f9f659b55c3f80d4a029d619b2b3144b1206
-django-crispy-forms==1.14.0 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:35887b8851a931374dd697207a8f56c57a9c5cb9dbf0b9fa54314da5666cea5b \
-    --hash=sha256:bc4d2037f6de602d39c0bc452ac3029d1f5d65e88458872cc4dbc01c3a400604
+django-crispy-forms==2.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:90193b068bf948d9c68449bc8260afed1a8e2afe11ee0bac8c4ebfaeb175b322 \
+    --hash=sha256:d1d4e585929058a9ab3b797666ea5b69320b9ba7937f9d146d32173246a6fd13
 django-debug-toolbar==3.8.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:24ef1a7d44d25e60d7951e378454c6509bf536dce7e7d9d36e7c387db499bc27 \
     --hash=sha256:879f8a4672d41621c06a4d322dcffa630fc4df056cada6e417ed01db0e5e0478
@@ -704,9 +707,9 @@ pillow==9.4.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:f09598b416ba39a8f489c124447b007fe865f786a89dbfa48bb5cf395693132a \
     --hash=sha256:f6e78171be3fb7941f9910ea15b4b14ec27725865a73c15277bc39f5ca4f8391 \
     --hash=sha256:f715c32e774a60a337b2bb8ad9839b4abf75b267a0f18806f6f4f5f1688c4b5a
-pip==23.0 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:aee438284e82c8def684b0bcc50b1f6ed5e941af97fa940e83e2e8ef1a59da9b \
-    --hash=sha256:b5f88adff801f5ef052bcdef3daa31b55eb67b0fccd6d0106c206fa248e0463c
+pip==23.0.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:236bcb61156d76c4b8a05821b988c7b8c35bf0da28a4b614e8d6ab5212c25c6f \
+    --hash=sha256:cd015ea1bfb0fcef59d8a286c1f8bebcb983f6317719d415dc5351efb7cd7024
 pip-api==0.0.30 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2a0314bd31522eb9ffe8a99668b0d07fee34ebc537931e7b6483001dbedcbdc9 \
     --hash=sha256:a05df2c7aa9b7157374bcf4273544201a0c7bae60a9c65bcf84f3959ef3896f3
