Upgrade factory-boy. Replace password function with PostGenerationMethodCall. Resolves #113

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ flake8-black = "^0.3.3"
 flake8-bugbear = "^23.0.0"
 flake8-docstrings = "^1.6.0"
 safety = "2.4.0b1"
-factory-boy = "3.0.1"
+factory-boy = "^3.2.0"
 pip-check = "^2.7"
 pip-audit = "^2.4.3"
 Sphinx = "^6.1.0"
