--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,21 +25,19 @@ repos:
       - id: trailing-whitespace
         files: (^|/)a/.+\.(py|html|sh|css|js)$
 
-  - repo: local
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.0.267'
+    hooks:
+    - id: ruff
+      args: [ --fix, --exit-non-zero-on-fix ]
+
+  - repo: https://github.com/psf/black
+    rev: 23.3.0
     hooks:
     - id: black
       name: black
-      entry: poetry run black
-      language: system
-      types: [python]
       exclude: ^.*\b(migrations)\b.*$
 
-    - id: flake8
-      name: flake8
-      entry: poetry run flake8
-      language: system
-      types: [python]
-  
   - repo: https://github.com/python-poetry/poetry
     rev: '1.4.0'
     hooks:
