--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -390,15 +390,15 @@ django-extensions==3.2.3 ; python_version >= "3.10" and python_version < "4.0" \
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2bc690aab89eedbe01311752320a9a12e7548e3b0ed102681acc5736a41a4762 \
     --hash=sha256:6af4bc3ae4a9b55eaad6dbe5164918982d2762661aebc9f83d9fa49f6009514e
-django-test-plus==2.2.1 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:5eaacb7a26b88f12df06538ffe4ad44e81636e07003e4863ef704204069bd8bb \
-    --hash=sha256:980a0ef6705421485a63f93fee849420a4563552acfea83255e57372233c2133
+django-test-plus==2.2.2 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:10173d470c36ebbcb402f22650051b22656e351a5f60a7cf10485eddfe77e388 \
+    --hash=sha256:3563dd13eef52d6528e5671d7ad60bebc91a5fc5136681d228f4731b706845d6
 docutils==0.18.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:23010f129180089fbcd3bc08cfefccb3b890b0050e1ca00c867036e9d161b98c \
     --hash=sha256:679987caf361a7539d76e584cbeddc311e3aee937877c87346f31debc63e9d06
-dparse==0.6.2 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:8097076f1dd26c377f30d4745e6ec18fef42f3bf493933b842ac5bafad8c345f \
-    --hash=sha256:d45255bda21f998bc7ddf2afd5e62505ba6134756ba2d42a84c56b0826614dfe
+dparse==0.6.3 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:0d8fe18714056ca632d98b24fbfc4e9791d4e47065285ab486182288813a5318 \
+    --hash=sha256:27bb8b4bcaefec3997697ba3f6e06b2447200ba273c0b085c3d012a04571b528
 environs[django]==9.5.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:1e549569a3de49c05f856f40bce86979e7d5ffbbc4398e7f338574c220189124 \
     --hash=sha256:a76307b36fbe856bdca7ee9161e6c466fd7fcffc297109a118c59b54e27e30c9
@@ -411,9 +411,9 @@ executing==1.2.0 ; python_version >= "3.10" and python_version < "4.0" \
 factory-boy==3.2.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:a98d277b0c047c75eb6e4ab8508a7f81fb03d2cb21986f627913546ef7a2a55e \
     --hash=sha256:eb02a7dd1b577ef606b75a253b9818e6f9eaf996d94449c9d5ebb124f90dc795
-faker==18.11.1 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:02980fe15acd58861305568bae0a277680792a505a5a45a309d352f79c452dd1 \
-    --hash=sha256:df4ee36d058a6a96de9d5e645571ef8536946a0b62db841494f8a3bc3bcdc5af
+faker==18.11.2 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:21c2c29638e98502f3bba9ad6a4f07a4b09c5e2150bb491ff02411a5888f6955 \
+    --hash=sha256:ec6e2824bb1d3546b36c156324b9df6bca5a3d6d03adf991e6a5586756dcab9d
 filelock==3.12.2 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:002740518d8aa59a26b0c76e10fb8c6e15eae825d34b6fdf670333fd7b938d81 \
     --hash=sha256:cbb791cdea2a72f23da6ac5b5269ab0a0d161e9ef0100e653b69049a7706d1ec
@@ -729,9 +729,12 @@ pygments==2.15.1 ; python_version >= "3.10" and python_version < "4.0" \
 pyjwt[crypto]==2.7.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:ba2b425b15ad5ef12f200dc67dd56af4e26de2331f965c5439994dad075876e1 \
     --hash=sha256:bd6ca4a3c4285c1a2d4349e5a035fdf8fb94e04ccd0fcbe6ba289dae9cc3e074
-pytest==7.3.2 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:cdcbd012c9312258922f8cd3f1b62a6580fdced17db6014896053d47cddf9295 \
-    --hash=sha256:ee990a3cc55ba808b80795a79944756f315c67c12b56abd3ac993a7b8c17030b
+pyopenssl==23.2.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:24f0dc5227396b3e831f4c7f602b950a5e9833d292c8e4a2e06b709292806ae2 \
+    --hash=sha256:276f931f55a452e7dea69c7173e984eb2a4407ce413c918aa34b55f82f9b8bac
+pytest==7.4.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:78bf16451a2eb8c7a2ea98e32dc119fd2aa758f1d5d66dbf0a59d69a3969df32 \
+    --hash=sha256:b4bf8c45bd59934ed84001ad51e11b4ee40d40a1229d2c79f9c592b0a3f6bd8a
 pytest-cov==4.1.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:3904b13dfbfec47f003b8e77fd5b589cd11904a21ddf1ab38a64f204d6a10ef6 \
     --hash=sha256:6ba70b9e97e69fcc3fb45bfeab2d0a138fb65c4d0d6a41ef33983ad114be8c3a
@@ -909,9 +912,6 @@ stack-data==0.6.2 ; python_version >= "3.10" and python_version < "4.0" \
 termcolor==2.3.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:3afb05607b89aed0ffe25202399ee0867ad4d3cb4180d98aaf8eefa6a5f7d475 \
     --hash=sha256:b5b08f68937f138fe92f6c089b99f1e2da0ae56c52b78bf7075fd95420fd9a5a
-toml==0.10.2 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:806143ae5bfb6a3c6e736a764057db0e6a0e05e338b5630894a5f779cabb4f9b \
-    --hash=sha256:b3bda1d108d5dd99f4a20d24d9c348e91c4db7ab1b749200bded2f839ccbe68f
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11" \
     --hash=sha256:939de3e7a6161af0c887ef91b7d41a53e7c5a1ca976325f429cb46ea9bc30ecc \
     --hash=sha256:de526c12914f0c550d15924c62d72abc48d6fe7364aa87328337a31007fe8a4f
@@ -924,15 +924,18 @@ typing-extensions==4.6.3 ; python_version >= "3.10" and python_version < "4.0" \
 tzdata==2023.3 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32" \
     --hash=sha256:11ef1e08e54acb0d4f95bdb1be05da659673de4acbd21bf9c69e94cc5e907a3a \
     --hash=sha256:7e65763eef3120314099b6939b5546db7adce1e7d6f2e179e3df563c70511eda
-urllib3==1.26.16 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:8d36afa7616d8ab714608411b4a3b13e58f463aee519024578e062e141dce20f \
-    --hash=sha256:8f135f6502756bde6b2a9b28989df5fbe87c9970cecaa69041edcce7f0589b14
+urllib3==2.0.3 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:48e7fafa40319d358848e1bc6809b208340fafe2096f1725d05d67443d0483d1 \
+    --hash=sha256:bee28b5e56addb8226c96f7f13ac28cb4c301dd5ea8a6ca179c0b9835e032825
 virtualenv==20.23.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:34da10f14fea9be20e0fd7f04aba9732f84e593dac291b757ce42e3368a39419 \
     --hash=sha256:8ff19a38c1021c742148edc4f81cb43d7f8c6816d2ede2ab72af5b84c749ade1
 wcwidth==0.2.6 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:795b138f6875577cd91bba52baf9e445cd5118fd32723b460e30a0af30ea230e \
     --hash=sha256:a5220780a404dbe3353789870978e472cfe477761f06ee55077256e509b156d0
+werkzeug==2.3.6 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:935539fa1413afbb9195b24880778422ed620c0fc09670945185cce4d91a8890 \
+    --hash=sha256:98c774df2f91b05550078891dee5f0eb0cb797a522c757a2452b9cee5b202330
 whitenoise==6.5.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:15fe60546ac975b58e357ccaeb165a4ca2d0ab697e48450b8f0307ca368195a8 \
     --hash=sha256:16468e9ad2189f09f4a8c635a9031cc9bb2cdbc8e5e53365407acf99f7ade9ec
