--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
       - id: check-json
       - id: check-merge-conflict
       - id: check-toml
+        exclude: poetry\.lock
       - id: check-yaml
       - id: debug-statements
       # - id: detect-aws-credentials
@@ -26,20 +27,28 @@ repos:
         files: (^|/)a/.+\.(py|html|sh|css|js)$
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.277'
+    rev: v0.0.278
     hooks:
     - id: ruff
       args: [ --fix, --exit-non-zero-on-fix ]
 
   - repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 23.7.0
     hooks:
     - id: black
       name: black
       exclude: ^.*\b(migrations)\b.*$
 
+  - repo: https://github.com/Riverside-Healthcare/djLint
+    rev: v1.31.1
+    hooks:
+    - id: djlint-reformat-django
+      exclude: "htmlcov"
+    - id: djlint-django
+      exclude: "htmlcov"
+
   - repo: https://github.com/python-poetry/poetry
-    rev: '1.5.0'
+    rev: 1.5.0
     hooks:
       - id: poetry-check
       - id: poetry-lock
