Install django-types & add pyright config. Resolves #291

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ django-countries = "^7.3.2"
 Pillow = "^10.0"
 gunicorn = "^21.0"
 crispy-bootstrap4 = "^2022.1"
+django-types = "^0.17.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.0.0"
@@ -126,6 +127,41 @@ exclude="htmlcov"
 files=["templates/"]
 indent=2
 preserve_blank_lines=true
+
+[tool.pyright]
+include = ["config", "accounts", "pages", "learning_logs",]
+exclude = ["**/tests",
+    "**/__pycache__",
+    "**/migrations",
+]
+ignore = ["docs/_build"]
+defineConstant = { DEBUG = true }
+stubPath = ""
+venv = "learning-log-3s6_931d-py3.11"
+venvPath = "../../../venvs"
+
+typeCheckingMode = "basic"
+useLibraryCodeForTypes = true
+strictListInference = true
+strictDictionaryInference = true
+reportConstantRedefinition = "error"
+reportOptionalCall = "error"
+reportOptionalContextManager = "error"
+reportOptionalIterable = "error"
+reportOptionalMemberAccess = "error"
+reportMissingImports = true
+reportOptionalOperand = "error"
+reportOptionalSubscript = "error"
+reportUnnecessaryCast = "warning"
+reportUnnecessaryComparison = "error"
+reportUnnecessaryTypeIgnoreComment = "warning"
+
+pythonVersion = "3.11"
+pythonPlatform = "Linux"
+
+executionEnvironments = [
+  { root = ".", pythonVersion = "3.11", extraPaths = [ "accounts", "config", "pages", "learning_logs" ] },
+]
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
