--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -380,6 +380,9 @@ django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0" \
 django-test-plus==2.2.3 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:5a8e26c9bf8eab092012c2cce9c605e0dba5a15879771feeb992c424504a18fe \
     --hash=sha256:72e1ca5dcaaf4ad73c9c796ad6e0dc165db39f706c3ad822074d961f72eed743
+django-types==0.17.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:43d4931159524c1a08b25c1b9a4db2512b7c1234b64b1d4db4aff78881d6afd0 \
+    --hash=sha256:c1c42ab78876c57c728342d5ab060725ab371fc8dc83bb85bae0be06846aad70
 djlint==1.32.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:8aaec6776376cfd41f3e742ed9f5e3c46dc7c6cd7646abf9e99860fb1ec9f19a \
     --hash=sha256:c1e2141acf1547d244af7ef8abd15fbbae2abcc7a03e2bf31f8a491de69a6c72
