--- a/requirements.txt
+++ b/requirements.txt
@@ -204,6 +204,9 @@ django-extensions==3.2.3 ; python_version >= "3.10" and python_version < "4.0" \
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2bc690aab89eedbe01311752320a9a12e7548e3b0ed102681acc5736a41a4762 \
     --hash=sha256:6af4bc3ae4a9b55eaad6dbe5164918982d2762661aebc9f83d9fa49f6009514e
+django-types==0.17.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:43d4931159524c1a08b25c1b9a4db2512b7c1234b64b1d4db4aff78881d6afd0 \
+    --hash=sha256:c1c42ab78876c57c728342d5ab060725ab371fc8dc83bb85bae0be06846aad70
 environs[django]==9.5.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:1e549569a3de49c05f856f40bce86979e7d5ffbbc4398e7f338574c220189124 \
     --hash=sha256:a76307b36fbe856bdca7ee9161e6c466fd7fcffc297109a118c59b54e27e30c9
