Remove black formatter. Resolves #398

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,16 +38,16 @@ classifiers = [
 python = "^3.10"
 Django = "5.0.2"
 
-django-crispy-forms = "^2.0"
 django-allauth = ">=0.60.0, < 0.70"
 environs = { version = "^10", extras = ["django"] }
 django-extensions = "^3.2"
-psycopg2-binary = "^2.9.5"
 whitenoise = "^6.1.0"
-gunicorn = "^21.0"
+psycopg2-binary = "^2.9.5"
 Pillow = "^10.0"
+gunicorn = "^21.0"
+crispy-bootstrap4 = "^2024.0"
+django-crispy-forms = "^2.0"
 django-countries = "^7.3.2"
-crispy-bootstrap4 = "^2023.1"
 dj-database-url = "^2.0.0"
 soupsieve = "^2.3.1"
 sqlparse = "^0.4.2"
@@ -56,9 +56,8 @@ beautifulsoup4 = "^4.10.0"
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.0.0"
 pre-commit = "^3.0.0"
-ruff = ">=0.1.0, <=0.2.9"
+ruff = ">=0.1.0, <=0.3.9"
 nox = "2023.4.22"
-black = "^24.0"
 pytest = "^8.0"
 pytest-cov = "^4.0.0"
 pytest-django = "^4.5.2"
@@ -77,23 +76,6 @@ pyopenssl = ">=24.0, < 25.0"
 sphinx = ">= 7.2.5, < 7.3.0"
 furo = "^2024.0"
 django-types = "^0.19.0"
-
-[tool.black]
-line-length = 88
-# include = [
-#]
-exclude = '''
-/(
-    \.git
-  | __pycache__
-  | .pytest_cache
-  | .venv
-  | staticfiles
-  | build
-  | dist
-  | ^.*\b(migrations)\b.*$
-)/
-'''
 
 [tool.coverage.run]
 branch = true
@@ -128,16 +110,17 @@ show_contexts = true
 title = "learning-log coverage report"
 
 [tool.djlint]
-exclude=["htmlcov", "staticfiles"]
-files=["templates/"]
-indent=2
-max_line_length=120
-preserve_blank_lines=true
+exclude = ["htmlcov", "staticfiles"]
+files = ["templates/"]
+indent = 2
+max_line_length = 120
+preserve_blank_lines = true
 
 [tool.pyright]
 # See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
 include = ["config", "accounts", "pages", "learning_logs",]
-exclude = ["**/tests",
+exclude = [
+    "**/tests",
     "**/__pycache__",
     "**/migrations",
 ]
