--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "learning-log"
-version = "0.3.0"
+version = "0.3.1"
 description = "A Django web application for creating learning lists"
 authors = [
     "Kevin Bowen <kevin.bowen@gmail.com>",
@@ -36,6 +36,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Internet :: WWW/HTTP",
 ]
 
@@ -143,7 +144,7 @@ ignore = ["docs/_build"]
 defineConstant = { DEBUG = true }
 stubPath = ""
 # The following may need to be modified when collaborating with others
-venv = "learning-log-3s6_931d-py3.12"
+venv = "learning-log-3s6_931d-py3.13"
 venvPath = "../../../venvs"
 # More portable venv config
 # venvPath = "."
@@ -165,11 +166,11 @@ reportUnnecessaryCast = "warning"
 reportUnnecessaryComparison = "error"
 reportUnnecessaryTypeIgnoreComment = "warning"
 
-pythonVersion = "3.12"
+pythonVersion = "3.13"
 pythonPlatform = "Linux"
 
 executionEnvironments = [
-  { root = ".", pythonVersion = "3.12", extraPaths = [ "accounts", "config", "pages", "learning_logs" ] },
+  { root = ".", pythonVersion = "3.13", extraPaths = [ "accounts", "config", "pages", "learning_logs" ] },
 ]
 
 [tool.pytest.ini_options]
@@ -192,8 +193,8 @@ unsafe-fixes = false
 line-length = 88
 indent-width = 4
 
-# Assume Python 3.12.x
-target-version = "py312"
+# Assume Python 3.13.x
+target-version = "py313"
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
