Pin Safety. Resolves #473

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,15 +73,15 @@ pytest-sugar = "^1.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
 django-coverage-plugin = "^3.0.0"
 djlint = "^1.31.0"
-sphinx = ">= 8.0, < 9.0"
+sphinx = ">= 8.0, <9.0"
 sphinx-lint = "1.0"
-safety = "^3.0"
+safety = "3.2.3"
 factory-boy = "^3.2.0"
 ipython = "^8.4.0"
 friendly = "^0.7.0"
 colorama = "^0.4.4"
 werkzeug = "3.0.4"
-pyopenssl = ">=24.0, < 25.0"
+pyopenssl = ">=24.0, <25.0"
 furo = "^2024.0"
 django-types = "^0.19.0"
 
